fix: :lipstick: #73, Fix style of text in How it works on mobile
Fix font-size and line-height on mobile, set change for desktop after adjust mobile styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2264,13 +2264,15 @@ aqui
         &__normal-text {
             font-style: normal;
             font-weight: 300;
-            font-size: 18px;
-            line-height: 27px;
+            font-size: .875rem;
+            line-height: 1.0938rem;
             margin-bottom: .9375rem;
             max-width: 39.6875rem;
 
             @media screen and (min-width:1024px) {
                 max-width: 27.6875rem;
+                font-size: 1.125rem;
+                line-height: 1.6875rem;
             }
 
             @media screen and (min-width:1400px) {
